--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to Vuetify 3</title>
+    <title>Eclipse Police CAD</title>
+    <meta name="author" content="Eclipse TEAM: Vanzer, Tempt">
   </head>
   <body>
     <div id="app"></div>
